derive-ex-tests/tests/compile_fail/compare_op/eq_with_parital_ord_by.stderr
error: When `#[derive_ex(Eq)]` is specified, `#[ord(by = ...)]` must be used instead of `#[partial_ord(by = ...)]`.
 --> tests/compile_fail/compare_op/eq_with_parital_ord_by.rs:4:29
  |
4 | struct X(#[partial_ord(by = |l, r| l.len().partial_cmp(&r.len()))] String);
  |                             ^
